Trying to add graphs
It's the same file but trying to add some graphs in this time

--- a/BusAnalyticsTorreCars.ipynb
+++ b/BusAnalyticsTorreCars.ipynb
@@ -24,14 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-03440e5493fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#Import Plotly python API\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplotly\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'plotly'"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import math"
+    "import math\n",
+    "\n",
+    "#Import Plotly python API\n",
+    "import plotly.plotly as py"
    ]
   },
   {
@@ -183,126 +198,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Pivot table to show the avg quality score and number 0, 1, 2, and 3 complaints per model\n",
+    "table = pd.pivot_table(df, index=['model', 'complaint'], values=['quality score'], aggfunc=np.mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>quality score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>model</th>\n",
-       "      <th>complaint</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">1</th>\n",
-       "      <th>0</th>\n",
-       "      <td>90.452381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>89.545455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>89.705882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>83.285714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">2</th>\n",
-       "      <th>0</th>\n",
-       "      <td>96.551630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>94.647059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>90.034483</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>86.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">3</th>\n",
-       "      <th>0</th>\n",
-       "      <td>91.809091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>92.461538</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>88.833333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>84.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">4</th>\n",
-       "      <th>0</th>\n",
-       "      <td>97.172840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>99.571429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>93.583333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 quality score\n",
-       "model complaint               \n",
-       "1     0              90.452381\n",
-       "      1              89.545455\n",
-       "      2              89.705882\n",
-       "      3              83.285714\n",
-       "2     0              96.551630\n",
-       "      1              94.647059\n",
-       "      2              90.034483\n",
-       "      3              86.000000\n",
-       "3     0              91.809091\n",
-       "      1              92.461538\n",
-       "      2              88.833333\n",
-       "      3              84.750000\n",
-       "4     0              97.172840\n",
-       "      1              99.571429\n",
-       "      2              93.583333"
+       "order id                 518.445119\n",
+       "model                      0.918717\n",
+       "chassis time               1.454622\n",
+       "paint time                 0.191998\n",
+       "electric time              4.724549\n",
+       "mechanical time            3.072383\n",
+       "soft time                  1.682776\n",
+       "electric components        0.453827\n",
+       "mechanical components      0.479563\n",
+       "quality score              8.029692\n",
+       "complaint                  0.678951\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Pivot table to show the avg quality score and number 1, 2, and 3 complaints per model\n",
-    "table = pd.pivot_table(df, index=['model', 'complaint'], values=['quality score'], aggfunc=np.mean)\n",
-    "table"
+    "#Pivot table to show the number of complaints in relationship to the quality score for each model\n",
+    "table = pd.pivot_table(df, index=['model', 'quality score'], values=['complaint'], aggfunc=np.sum)\n",
+    "\n",
+    "#Calculate SD \n",
+    "df.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'complaint' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-513eb6996220>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#define axis complaint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcomplaint\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomplaint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'value'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'0'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'complaint'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mquality_score\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqualityscore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'value'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'0'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'QS'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'complaint' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#define axis complaint\n",
+    "complaint.plot(complaint, 'value', marker='0', label='complaint')\n",
+    "\n",
+    "quality_score.plot(qualityscore, 'value', marker='0', label='QS')\n",
+    "\n",
+    "plt.title('Complaints in relationship to QS')\n",
+    "\n",
+    "plt.ylabel('complaint')\n",
+    "plt.xlabel('quality score')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.show();"
    ]
   },
   {
